# Img-Segmentation-Framework-QT

./: Doxyfile  README.md  sample_creator.m
jur_gui_segmentation/: CMakeLists.txt  CMakeLists.txt.user.2.5pre1  mainpage.dox  package.xml
jur_gui_segmentation/cmake/: FindQwt.cmake  FindQwt6.cmake
jur_gui_segmentation/include/jur_gui_segmentation/: JURCONVERT.h  JUREVAL.h  JURGUI.h  JURGUI2DWindow.h  JURGUICVSWrapper.h  JURGUIEvalMethods.hpp  JURGUIFormatConvertROSOpenCV.hpp  JURGUIMainWindow.h  JURGUIPlotWidget.h  JURGUIROSNode.h  JURGUISubClassQGV.h  JURGUIUtilities.hpp
jur_gui_segmentation/launch/: jur_gui_segmentation.launch
jur_gui_segmentation/resources/: images.qrc
jur_gui_segmentation/resources/images/images_for_making_splash/: Untitled.xcf  Untitledp.xcf
jur_gui_segmentation/src/: JURGUI2DWindow.cpp  JURGUIEvalMethods.cpp  JURGUIMainWindow.cpp  JURGUIPlotWidget.cpp  JURGUIROSNode.cpp  JURGUISubClassQGV.cpp  JURGUIUtilities.cpp  main.cpp
jur_gui_segmentation/srv/: jur_segmentation_service.srv
jur_gui_segmentation/ui/: JURGUI2DWindow.ui  JURGUIAboutWindow.ui  JURGUIExpriment.ui  JURGUIMainWindow.ui  JURGUIMeanShiftSetting.ui  JURGUIPlotWidget.ui
jur_opencv_segmentation/: CMakeLists.txt  package.xml
jur_opencv_segmentation/include/jur_opencv_segmentation/: JUROPENCV.h  JUROpenCVMeanShift.h  JUROpenCVSegmentation.h  JUROpenCVWatershed.h
jur_opencv_segmentation/src/: JUROpenCVMeanShift.cpp  JUROpenCVSegmentation.cpp  JUROpenCVSegmentationNode.cpp  JUROpenCVWatershed.cpp
jur_segmentation/: CMakeLists.txt  package.xml
