<?xml version="1.0"?>
<package>
    <name>jur_gui_segmentation</name>
    <version>0.0.1</version>
    <description>
        A GUI for image segmentation/annotation and comparing with some built-in OpenCV's segmentation methods.
    </description>

    <maintainer email="v.azizi@jacobs-university.de">Vahid Azizi</maintainer>
    <author     email="v.azizi@jacobs-university.de">Vahid Azizi</author>
    <url        type="website">http://robotics.jacobs-university.de/</url>

    <license>BSD</license>

    <!-- <url type="repository">https://github.com/</url> -->

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>libqt4-dev</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>cv_bridge</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>libqt4-dev</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>cv_bridge</run_depend>

    <export></export>
</package>
